--- a/6.Stripping-Name/package.json
+++ b/6.Stripping-Name/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "6.stripping-names",
+  "name": "6.stripping-name",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
